--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "react-static-example-basic",
-  "version": "1.0.1",
+  "name": "baaden",
+  "author": "Frederik Klovborg <klovborg@gmail.com>",
+  "version": "1.5.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -27,5 +28,9 @@
   "devDependencies": {
     "eslint-config-react-tools": "1.x.x",
     "serve": "^10.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/frebliklo/baaden"
   }
 }
