--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -17,4 +17,5 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
+      - {label: "Language", name: "language", widget: "select", default: "da", options: ["en", "da"]}
       - {label: "Body", name: "body", widget: "markdown"}
