--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -11,11 +11,23 @@ collections:
     folder: "src/posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-    fields: # The fields for each document, usually in front matter. 
-    # Remove any that aren't needed for posts
-      - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - {label: "Language", name: "language", widget: "select", default: "da", options: ["en", "da"]}
-      - {label: "Body", name: "body", widget: "markdown"}
+    fields:
+      - label: "Title"
+        name: "title"
+        widget: "string"
+      - label: "Publish Date"
+        name: "date"
+        widget: "datetime"
+      - label: "Featured Image"
+        name: "thumbnail"
+        widget: "image"
+      - label: "Language"
+        name: "language"
+        widget: "select"
+        default: "Dansk"
+        options:
+          - { label: "Dansk", value: "da" }
+          - { label: "English", value: "en" }
+      - label: "Body"
+        name: "body"
+        widget: "markdown"
