--- a/package.json
+++ b/package.json
@@ -2,32 +2,45 @@
   "name": "baaden",
   "author": "Frederik Klovborg <klovborg@gmail.com>",
   "version": "1.5.0",
-  "main": "index.js",
+  "main": "src/index.ts",
+  "private": true,
   "license": "MIT",
   "scripts": {
     "start": "react-static start",
     "stage": "react-static build --staging",
     "build": "react-static build",
-    "serve": "serve dist -p 3000"
+    "bundle": "react-static bundle",
+    "export": "react-static export",
+    "serve": "serve dist -p 3000 -s"
   },
   "dependencies": {
-    "axios": "^0.16.2",
-    "gray-matter": "^3.1.1",
-    "klaw": "^2.1.1",
-    "moment": "^2.20.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-hot-loader": "^4.0.0-beta.21",
-    "react-markdown": "^3.1.0",
-    "react-moment": "^0.7.0",
-    "react-router": "^4.2.0",
-    "react-static": "^5.9.7",
-    "react-static-plugin-styled-components": "^1.0.5",
-    "styled-components": "^3.4.5"
+    "@reach/router": "^1.2.1",
+    "axios": "^0.18.0",
+    "gray-matter": "^4.0.2",
+    "klaw": "^3.0.0",
+    "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
+    "react-markdown": "^4.1.0",
+    "react-moment": "^0.9.2",
+    "react-static": "^7.0.0",
+    "react-static-plugin-reach-router": "latest",
+    "react-static-plugin-sass": "^7.1.0",
+    "react-static-plugin-sitemap": "latest",
+    "react-static-plugin-source-filesystem": "latest",
+    "react-static-plugin-typescript": "latest"
   },
   "devDependencies": {
-    "eslint-config-react-tools": "1.x.x",
-    "serve": "^10.0.0"
+    "@types/node": "^10.12.23",
+    "@types/reach__router": "^1.2.2",
+    "@types/react": "^16.8.2",
+    "@types/react-dom": "^16.8.0",
+    "@types/react-hot-loader": "^4.1.0",
+    "@types/webpack-env": "^1.13.6",
+    "serve": "10.1.1",
+    "typed-react-markdown": "^0.1.0",
+    "typescript": "^3.4.1"
   },
   "repository": {
     "type": "git",
