--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "baaden",
   "author": "Frederik Klovborg <klovborg@gmail.com>",
-  "version": "1.5.0",
+  "version": "2.0.0",
   "main": "src/index.ts",
   "private": true,
   "license": "MIT",
@@ -45,5 +45,11 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/frebliklo/baaden"
-  }
+  },
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "maintained node versions",
+    "not dead"
+  ]
 }
